# riack

./: .gitignore  .gitmodules  .travis.yml  Doxyfile.in  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac
lib/riack/: _private.h  client.c  client.h  content.c  content.h  dtop.c  dtupdatereq.c  dtupdatereq.h  libriack.ver  message.h  putreq.c  putreq.h  riack.h  setop.c  setop.h
tests/: check_client.c  check_content.c  check_dtupdatereq.c  check_libriack.c  check_putreq.c  check_setop.c
